main and who are we pages done

--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="/main.css">
+  <link rel="stylesheet" href="/styles/root.css">
+  <link rel="stylesheet" href="/styles/style.css">
 
-  <link href="https://fonts.cdnfonts.com/css/proxima-nova-condensed" rel="stylesheet">
   <link href="https://fonts.cdnfonts.com/css/sf-pro-display" rel="stylesheet">
   <link href="https://fonts.cdnfonts.com/css/elephant" rel="stylesheet">
 
@@ -146,7 +147,11 @@
         банков и инвестиций, инжиниринга и строительства, HoReCa, туризма и
         гостиничного бизнеса
       </p>
-      <button>Подробнее</button>
+
+      <a href="#">
+        <button id="button">Подробнее</button>
+      </a>
+
       <span class="star3"></span>
     </div>
   </section>
@@ -168,42 +173,217 @@
         <div class="block-1">
           <div class="text">
             <h1 id="title">Executive Search</h1>
-            <p id="descr">- это практика эксклюзивного поиска топ-руководителей, стратегически важных сотрудников и уникальных специалистов.</p>
+            <p id="descr">- это практика эксклюзивного поиска топ-руководителей, стратегически важных сотрудников и
+              уникальных специалистов.</p>
           </div>
-          <div class="img"></div>
+          <div class="img"><img src="/public/imgs/search window.png" alt=""></div>
         </div>
         <div class="block-2">
           <div class="text">
-            <h1 id="title">ІТ-подбор</h1>
-            <p id="descr">- это услуга по поиску и подбору специалистов в области информационных технологий, аналитики и разработки.</p>
+            <h1 id="title">Обучение персонала</h1>
+            <p id="descr">
+              - это ключевые аспекты управления
+              человеческими ресурсами, направленные на повышение квалификации и профессионального
+              роста сотрудников внутри организации.
+              - это услуга по поиску и подбору специалистов в области информационных технологий, аналитики и разработки.
+            </p>
           </div>
-          <div class="img"></div>
+          <div class="img"><img src="/public/imgs/consulting and business planning and writing.png" alt=""></div>
         </div>
         <div class="block-3">
+          <div class="text">
+            <h1 id="title">ІТ-подбор</h1>
+            <p id="descr">- это услуга по поиску и подбору специалистов в области информационных технологий, аналитики и
+              разработки.</p>
+          </div>
+          <div class="img"><img src="/public/imgs/Developing a mobile application and software.png" alt=""></div>
+        </div>
+        <div class="block-4">
           <div class="text">
             <h1 id="title">НР-консалтинг</h1>
             <p id="descr">- поможем компаниям в оптимизации процессов по работе с персоналом.</p>
           </div>
-          <div class="img"></div>
+          <div class="img"><img src="/public/imgs/Woman chatting with online consultant.png" alt=""></div>
         </div>
-        <div class="block-4">
-          <div class="text">
-            <h1 id="title">Обучение
-              персонала</h1>
-            <p id="descr">- это ключевые аспекты управления
-              человеческими ресурсами, направленные на повышение квалификации и профессионального
-              роста сотрудников внутри организации.</p>
+      </div>
+
+
+      <a href="#">
+        <button id="button">Подробнее</button>
+      </a>
+
+    </div>
+
+  </section>
+
+  <section class="section-6">
+    <div class="container">
+      <div class="top">
+        <h1 class="title">
+          Чем мы
+          Занимаемся?
+        </h1>
+        <p class="descr">
+          Мы занимаемся полным спектром НР-услуг от консалтинга и подбора персонала до
+          аутсорсинга процессов. HR Nafi находит лучших специалистов для любых компаний.
+        </p>
+      </div>
+
+      <div class="revuesSwiper">
+
+        <div class="swiper-wrapper">
+          <div class="swiper-slide">
+            <div class="title_box">
+              <figure></figure>
+              <span>
+                <h3>Далер Мустафаев</h3>
+                <p>Генеральный директор "Firma"</p>
+              </span>
+            </div>
+            <div class="descr">
+              <P>Но тщательные исследования конкурентов призваны к ответу. Являясь всего лишь частью общей картины,
+                действия
+                представителей оппозиции призывают нас к новым свершениям, которые, в свою очередь, должны быть указаны
+                как претенденты на роль ключевых факторов. Лишь стремящиеся вытеснить традиционное производство,
+                нанотехнологии неоднозначны и будут разоблачены. В своём стремлении улучшить пользовательский опыт мы
+                упускаем, что реплицированные с зарубежных источников, современные исследования являются только методом
+                политического участия и заблокированы в рамках своих собственн...</P>
+            </div>
           </div>
-          <div class="img"></div>
-        </div> 
+          <div class="swiper-slide">
+            <div class="title_box">
+              <figure></figure>
+              <span>
+                <h3>Далер Мустафаев</h3>
+                <p>Генеральный директор "Firma"</p>
+              </span>
+            </div>
+            <div class="descr">
+              <P>Но тщательные исследования конкурентов призваны к ответу. Являясь всего лишь частью общей картины,
+                действия
+                представителей оппозиции призывают нас к новым свершениям, которые, в свою очередь, должны быть указаны
+                как претенденты на роль ключевых факторов. Лишь стремящиеся вытеснить традиционное производство,
+                нанотехнологии неоднозначны и будут разоблачены. В своём стремлении улучшить пользовательский опыт мы
+                упускаем, что реплицированные с зарубежных источников, современные исследования являются только методом
+                политического участия и заблокированы в рамках своих собственн...</P>
+            </div>
+          </div>
+          <div class="swiper-slide">
+            <div class="title_box">
+              <figure></figure>
+              <span>
+                <h3>Далер Мустафаев</h3>
+                <p>Генеральный директор "Firma"</p>
+              </span>
+            </div>
+            <div class="descr">
+              <P>Но тщательные исследования конкурентов призваны к ответу. Являясь всего лишь частью общей картины,
+                действия
+                представителей оппозиции призывают нас к новым свершениям, которые, в свою очередь, должны быть указаны
+                как претенденты на роль ключевых факторов. Лишь стремящиеся вытеснить традиционное производство,
+                нанотехнологии неоднозначны и будут разоблачены. В своём стремлении улучшить пользовательский опыт мы
+                упускаем, что реплицированные с зарубежных источников, современные исследования являются только методом
+                политического участия и заблокированы в рамках своих собственн...</P>
+            </div>
+          </div>
+          <div class="swiper-slide">
+            <div class="title_box">
+              <figure></figure>
+              <span>
+                <h3>Далер Мустафаев</h3>
+                <p>Генеральный директор "Firma"</p>
+              </span>
+            </div>
+            <div class="descr">
+              <P>Но тщательные исследования конкурентов призваны к ответу. Являясь всего лишь частью общей картины,
+                действия
+                представителей оппозиции призывают нас к новым свершениям, которые, в свою очередь, должны быть указаны
+                как претенденты на роль ключевых факторов. Лишь стремящиеся вытеснить традиционное производство,
+                нанотехнологии неоднозначны и будут разоблачены. В своём стремлении улучшить пользовательский опыт мы
+                упускаем, что реплицированные с зарубежных источников, современные исследования являются только методом
+                политического участия и заблокированы в рамках своих собственн...</P>
+            </div>
+          </div>
+        </div>
+
+        <div class="box">
+          <div class="prev"><img src="/public/icons/arrow.svg" alt=""></div>
+          <div class="next"><img src="/public/icons/arrow.svg" alt=""></div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section class="section-7">
+    <div class="container">
+      <div class="top">
+        <h1>Напишите нам</h1>
+      </div>
+      <div class="bottom">
+        <div class="img"><img src="/public/imgs/Tablet with web design application.png" alt=""></div>
+        <div class="form_box">
+          <form name="notifyUs">
+            <input type="text" placeholder="Напишите имя">
+            <input type="email" placeholder="E-mail">
+            <input type="text" placeholder="Номер телефона">
+            <textarea name="message" placeholder="Сообщение"></textarea>
+            <button>Отправить</button>
+          </form>
+        </div>
       </div>
     </div>
 
   </section>
 
+  <footer>
+    <div class="container">
+      <div class="top">
+        <div class="left">
 
+          <div class="logo"></div>
 
+          <div class="descr">
+            Любая информация на сайте защищена авторским
+            правом. Копирование информации с
+            сайта в любых целях запрещено.
+          </div>
 
+          <div class="social-media">
+            <a href="#"><img src="/public/icons/instagram.svg" alt="icon"></a>
+            <a href="#"><img src="/public/icons/telegram.svg" alt="icon"></a>
+            <a href="#"><img src="/public/icons/facebook.svg" alt="icon"></a>
+          </div>
+
+        </div>
+        <div class="right">
+
+          <div class="collumn">
+            <h3>Информация</h3>
+            <ul>
+              <li>Кто мы?</li>
+              <li>Что мы делаем?</li>
+              <li>Карьера</li>
+              <li>Nafi academy</li>
+            </ul>
+          </div>
+
+          <div class="collumn">
+            <h3>Контакты</h3>
+            <a href="#">г. Самарканд, ул. Шахрисабз, 38/1</a> 
+            <a href="mailto:info@hrnafi.com">info@hrnafi.com</a> 
+            <a href="tel:+998904707016">+998 90 470 70 16</a>
+          </div>
+
+        </div>
+      </div>
+
+      <div class="bottom">
+        <a href="#">Copyright © 2024 HR Nafi Inc. All rights reserved.</a>
+        <a href="#">Privacy Policy | Terms of Use</a>
+        <a href="#">Разработано студией Inexbrand</a>
+      </div>
+    </div>
+  </footer>
 
   <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-element-bundle.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
