--- a/index.html
+++ b/index.html
@@ -81,8 +81,39 @@
 				</div>
 			</div>
 		</section>
-		
 
+		<section class="employees-container">
+			<div class="employees">
+				<h1>Мы подбираем <b>ключевых <br>сотрудников</b></h1>
+				<div class="light-text">
+					<h3><strong>Выбор лидеров завтрашнего дня</strong></h3>
+					<p>Определяем ключевые характеристики и потенциал для лидерства, чтобы
+						гарантировать долгосрочный успех и устойчивость компании.</p>
+
+					<h3><strong>Формирование команды мечты</strong></h3>
+					<p>Соединяем уникальные таланты в единую команду, способную на<br>
+						реализацию инновационных проектов и достижение новых высот в бизнесе.</p>
+
+					<h3><strong>Отбор топ-менеджеров для стратегического роста</strong></h3>
+					<p>Ищем и привлекаем лидеров с выдающимися управленческими и<br>
+						стратегическими способностями, необходимыми для руководства и<br>
+						развития ключевых направлений нашей компании.</p>
+
+					<div class="contact-container">
+						<h3>Связаться с нами</h3>
+					</div>
+				</div>
+
+
+
+
+
+
+			</div>
+
+
+
+		</section>
 
 		<!-- <section class="about">
 			<h2>Мы готовим ключевых сотрудников</h2>
