--- a/index.html
+++ b/index.html
@@ -103,17 +103,70 @@
 						<h3>Связаться с нами</h3>
 					</div>
 				</div>
+			</div>
+			<div class="video-container">
+				<div class="wrapper-button">
+					<div class="play-button">
+						<img src="icons/play-circle.svg" alt="play">
+						<p>Play</p>
+					</div>
+				</div>
+			</div>
+		</section>
 
+		<section class="values-container">
+			<div class="values-text">
+				<h2>Наши ценности</h2>
+			</div>
+			<div class="small-containers">
+				<div id="care">
+					<div class="text-wrapper">
+						<h3>Забота</h3>
+						<p>- бережное отношение и индивидуальный подход к каждому человеку лежат в основе профессионального кода HR Nafi</p>
+					</div>
+				</div>
+				<div id="confidence">
+					<div class="text-wrapper">
+						<h3>Доверие</h3>
+						<p>- открытость, умение слушать и доверять партнеру позволяют выстроить крепкие профессиональные отношения</p>
+					</div>
+				</div>
+				<div id="result">
+					<div class="text-wrapper">
+						<h3>Результативность</h3>
+						<p>- мы достигаем целей в заданный срок с максимальной эффективностью, сохраняя высокое качество</p>
+					</div>
+				</div>
+				<div id="loyalty">
+					<div class="text-wrapper">
+						<h3>Верность</h3>
+						<p>- в любой ситуации мы остаёмся верны справедливы принципам ведения бизнеса</p>
+					</div>
+				</div>
+			</div>
+		</section>
 
-
-
-
-
+		<section class="our-service-container">
+			<div class="our-service-text">
+				<h2>Наши услуги</h2>
+				<p>Мы занимаемся полным спектром HR - услуг<br> от консалтинга и подбора персонала до<br> аутсорсинга процессов.</p>
 			</div>
 
 
 
+
+
+
+
+
 		</section>
+
+
+
+
+
+
+
 
 		<!-- <section class="about">
 			<h2>Мы готовим ключевых сотрудников</h2>
