writing service block

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 
 					<h3><strong>Отбор топ-менеджеров для стратегического роста</strong></h3>
 					<p>Ищем и привлекаем лидеров с выдающимися управленческими и<br>
-						стратегическими способностями, необходимыми для руководства и<br>
+						стратегическими способностями, необходимыми для руководства и
 						развития ключевых направлений нашей компании.</p>
 
 					<div class="contact-container">
@@ -146,13 +146,56 @@
 			</div>
 		</section>
 
+
 		<section class="our-service-container">
 			<div class="our-service-text">
 				<h2>Наши услуги</h2>
 				<p>Мы занимаемся полным спектром HR - услуг<br> от консалтинга и подбора персонала до<br> аутсорсинга процессов.</p>
 			</div>
 
+			<div class="triple-container">
+				<div class="triple-wrapper">
+					<div id="executive-search">
+						<div class="text-wrapper">
+							<h3>Executive Search</h3>
+							<p>-это практика эксклюзивного поиска топ-руководителей, стратегически важных сотрудников и уникальных специалистов</p>
+						</div>
+					</div>
+					<div id="it-search">
+						<div class="text-wrapper">
+							<h3>IT - подбор</h3>
+							<p>-это услуга по поиску и подбору специалистов в области информационных технологий, аналитики и разработки</p>
+						</div>
+					</div>
+					<div id="massive-search">
+						<div class="text-wrapper">
+						<h3>Массовый подбор</h3>
+						<p>-массовый подбор персонала необходим, когда заказчику требуется большое количество сотрудников с одинаковой квалификацией</p>
+					</div>
+					</div>
+				</div>
+			</div>
 
+
+			<div class="twice-container">
+				<div class="twice-wrapper">
+
+					<div id="hr-consalting">
+						<div class="text-wrapper">
+							<h3>HR - консалтинг</h3>
+							<p>-поможем компаниям в оптимизации процессов по работе с персоналом.</p>
+						</div>
+					</div>
+
+					<div id="teaching-employees">
+						<div class="text-wrapper">
+							<h3>Обучение персонала</h3>
+							<p>-это ключевые аспекты управления человеческими ресурсами, направленные на повышение квалификации и профессионального роста сотрудников внутри организации</p>
+							<img src="/images/graduation cap lying on pile of books.svg" alt="books">
+						</div>
+					</div>
+				</div>
+			</div>
 
 
 
