delal mnogo chego

--- a/index.html
+++ b/index.html
@@ -29,7 +29,55 @@
 					<li><a href="#academy">Отправить резюме</a></li>
 				</ul>
 			</nav>
+
+			<div class="sidebar">
+				<div class="sidebar-wrapper">
+					<button class="close">
+						<span class="line top"></span>
+						<span class="line middle"></span>
+						<span class="line bottom"></span>
+					</button>
+					<ul class="sidebar-list">
+						<li class="sidebar-item">
+							<a href="#about"> О нас </a>
+						</li>
+
+						<li class="sidebar-item">
+							<a href="#what-we-do"> Наши услуги </a>
+						</li>
+
+						<li class="sidebar-item">
+							<a href="#team"> Наша команда </a>
+						</li>
+
+						<li class="sidebar-item">
+							<a href="#reviews"> Отзывы </a>
+						</li>
+
+						<li class="sidebar-item">
+							<a href="#academy"> Отправить резюме </a>
+						</li>
+
+						<li class="sidebar-item">
+							<div class="social-media">
+								<a href="https://www.instagram.com/"
+									><img src="icons/instagram.svg" alt="instagram logo"
+								/></a>
+								<a href="https://web.telegram.org/a/"
+									><img src="icons/telegram.svg" alt="telegram-logo"
+								/></a>
+							</div>
+						</li>
+					</ul>
+				</div>
+			</div>
+
 			<div class="wrapper-menu">
+				<button class="open">
+					<span class="line top"></span>
+					<span class="line middle"></span>
+					<span class="line bottom"></span>
+				</button>
 				<div class="social-media">
 					<a href="https://www.instagram.com/"
 						><img src="icons/instagram.svg" alt="instagram logo"
@@ -86,10 +134,36 @@
 				<hr />
 				<div class="partners-wrapper">
 					<div class="our-partners">Наши партнеры</div>
-					<div class="partners-logos">
-						<img src="icons/makro.svg" alt="makro" />
-						<img src="icons/mediapark.svg" alt="mediapark" />
-						<img src="icons/sag.svg" alt="sag" />
+					<div class="partners-logos swiper-logos">
+						<div class="swiper-wrapper">
+							<div class="swiper-slide">
+								<img src="/icons/brands/bionur.png" alt="bionur" />
+							</div>
+							<div class="swiper-slide">
+								<img src="/icons/brands/casva.png" alt="casva" />
+							</div>
+							<div class="swiper-slide">
+								<img src="/icons/brands/express-logo.png" alt="sagExpress" />
+							</div>
+							<div class="swiper-slide">
+								<img src="/icons/brands/SAG-high.png" alt="sam-gilam" />
+							</div>
+							<div class="swiper-slide">
+								<img src="/icons/brands/samglass.png" alt="samGlass" />
+							</div>
+							<div class="swiper-slide">
+								<img src="/icons/brands/UZNUTS.png" alt="UZNUTS" />
+							</div>
+							<div class="swiper-slide">
+								<img src="/icons/brands/XIVA.png" alt="Xiva" />
+							</div>
+							<div class="swiper-slide">
+								<img src="/icons/brands/rombo.png" alt="rombo" />
+							</div>
+							<div class="swiper-slide">
+								<img src="/icons/brands/lazona.png" alt="lazona" />
+							</div>
+						</div>
 					</div>
 				</div>
 			</section>
@@ -355,15 +429,27 @@
 					<div class="reviews-content swiper-wrapper">
 						<div class="swiper-slide">
 							<img src="/images/Rectangle 27.png" alt="" />
+							<button class="launch">
+								<img src="/icons/launch.svg" alt="launch" />
+							</button>
 						</div>
 						<div class="swiper-slide">
 							<img src="/images/Rectangle 28.png" alt="" />
+							<button class="launch">
+								<img src="/icons/launch.svg" alt="launch" />
+							</button>
 						</div>
 						<div class="swiper-slide">
 							<img src="/images/Rectangle 29.png" alt="" />
+							<button class="launch">
+								<img src="/icons/launch.svg" alt="launch" />
+							</button>
 						</div>
 						<div class="swiper-slide">
 							<img src="/images/Rectangle 30.png" alt="" />
+							<button class="launch">
+								<img src="/icons/launch.svg" alt="launch" />
+							</button>
 						</div>
 					</div>
 					<div class="next-buttons">
@@ -416,6 +502,11 @@
 						</div>
 					</div>
 				</div>
+			</div>
+
+			<div class="conclusion">
+				<span class="madeBy"> ©2024, Разработано студией Inexbrand </span>
+				<span class="confidence"> Политика конфиденциальности </span>
 			</div>
 		</footer>
 
