--- a/index.html
+++ b/index.html
@@ -196,9 +196,9 @@
 							развития ключевых направлений нашей компании.
 						</p>
 
-						<div class="contact-container">
+						<a href="contact-container" class="contact-container">
 							<h3>Связаться с нами</h3>
-						</div>
+						</a>
 					</div>
 				</div>
 				<div class="video-container">
@@ -346,10 +346,10 @@
 									Узнайте, как мы можем помочь вашей компании в подборе,
 									развитии и управлении талантами.
 								</p>
-								<div class="arrow-text">
+								<a href="https://t.me/eldormustafaev" class="arrow-text">
 									<p>Записаться</p>
 									<img src="/icons/arrow-right.png" alt="arrow" />
-								</div>
+								</a>
 							</div>
 						</div>
 					</div>
