all pictures and socials

--- a/index.html
+++ b/index.html
@@ -60,10 +60,9 @@
 
 						<li class="sidebar-item">
 							<div class="social-media">
-								<a href="https://www.instagram.com/"
-									><img src="icons/instagram.svg" alt="instagram logo"
-								/></a>
-								<a href="https://web.telegram.org/a/"
+								<a href="https://www.instagram.com/hr_nafi?igsh=NHJ1ZzBxYzU2MTN2" target="_blank">
+									<img src="/icons/instagram.png" alt="instagram" />
+								<a href="https://t.me/hrnafiuz" target="_blank"
 									><img src="icons/telegram.svg" alt="telegram-logo"
 								/></a>
 							</div>
@@ -97,6 +96,9 @@
 				<div class="swiper-wrapper">
 					<div class="swiper-slide">
 						<img src="images/buildings.webp" alt="buildings" />
+
+						<!-- <img src="images/Frame 288.png" alt="ai" /> -->
+						<!-- <img src="images/Frame 289.png" alt="comand" /> -->
 						<div class="wrapper-for-img">
 							<div class="logo-image">
 								<img src="icons/logo.webp" alt="logo" />
@@ -112,18 +114,41 @@
 						</div>
 					</div>
 					<div class="swiper-slide">
-						<img src="images/buildings.webp" alt="buildings" />
+						<img src="images/chess.png" alt="chess" />
 						<div class="wrapper-for-img">
 							<div class="logo-image">
 								<img src="icons/logo.webp" alt="logo" />
 							</div>
 							<span class="text-image">
-								Превращаем управленческий<br />
-								хаос в
-								<b
-									>эффективность и<br />
-									порядок.</b
-								>
+								Лучших специалистов<br />
+								объединяем с ведущими<br>
+								<b>компаниями</b>
+							</span>
+						</div>
+					</div>
+					<div class="swiper-slide">
+						<img src="images/ai.png" alt="chess" />
+						<div class="wrapper-for-img">
+							<div class="logo-image">
+								<img src="icons/logo.webp" alt="logo" />
+							</div>
+							<span class="text-image">
+								Внедряем <b>автоматизацию</b><br />
+								для создания прозрачных и<br>
+								<b>управляемых процессов.</b>
+							</span>
+						</div>
+					</div>
+					<div class="swiper-slide">
+						<img src="images/buttons.png" alt="chess" />
+						<div class="wrapper-for-img">
+							<div class="logo-image">
+								<img src="icons/logo.webp" alt="logo" />
+							</div>
+							<span class="text-image">
+								Повышаем <b>мотивацию</b> и<br/>
+								компетентность команд для<br>
+								достижение <b>общего успеха.</b>
 							</span>
 						</div>
 					</div>
@@ -497,8 +522,12 @@
 						</p>
 
 						<div class="links">
-							<img src="/icons/instagram.png" alt="instagram" />
-							<img src="/icons/telegram.png" alt="telegram" />
+							<a href="https://www.instagram.com/hr_nafi?igsh=NHJ1ZzBxYzU2MTN2" target="_blank">
+								<img src="/icons/instagram.png" alt="instagram" />
+							</a>
+							<a href="https://t.me/hrnafiuz" target="_blank">
+								<img src="/icons/telegram.png" alt="telegram" />
+							</a>
 						</div>
 					</div>
 				</div>
